--- a/index.html
+++ b/index.html
@@ -98,6 +98,25 @@
         .reset-button:hover {
             background-color: #ff6666;
         }
+        .shovel-button {
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            font-size: 16px;
+            background-color: #8B4513;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .shovel-button.selected {
+            background-color: #A0522D;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+        }
+        .shovel-button:hover {
+            background-color: #A0522D;
+        }
     </style>
 </head>
 <body>
